--- a/siroop/scss/_custom.scss
+++ b/siroop/scss/_custom.scss
@@ -1,1 +1,29 @@
+// body{
+//   background: red;
+// }
 
+
+.banner-image
+{
+  background-size: cover;
+}
+.yellow-box{
+  background-color: #ffdc2d;
+  height: 1000;
+  width: 800;
+}
+
+
+.yellow-image{
+  border-radius: 50%;
+
+}
+
+.swiss-image{
+  padding-left: 200px;
+  border-radius: 50%
+}
+
+.list{
+  float: left
+}
