--- a/siroop/scss/_custom.scss
+++ b/siroop/scss/_custom.scss
@@ -11,17 +11,20 @@
   background-color: #ffdc2d;
   height: 1000;
   width: 800;
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
 }
 
 
 .yellow-image{
   border-radius: 50%;
 
+
 }
 
 .swiss-image{
   padding-left: 200px;
-  border-radius: 50%
 }
 
 .list{
