--- a/siroop/scss/_custom.scss
+++ b/siroop/scss/_custom.scss
@@ -1,7 +1,10 @@
 // body{
-//   background: red;
+//   margin: ;
 // }
 
+body {
+  margin: 3rem;
+}
 
 .banner-image
 {
@@ -11,22 +14,33 @@
   background-color: #ffdc2d;
   height: 1000;
   width: 800;
-  border: 0px;
-  padding: 0px;
-  margin: 0px;
+  text-align: left;
+
+}
+
+
+li{
+  list-style: none;
+  margin: 0 0 10px 10px;
 }
 
 
 .yellow-image{
   border-radius: 50%;
+  padding-left: 20px;
 
 
 }
 
 .swiss-image{
-  padding-left: 200px;
+  padding-left: 120px;
 }
 
-.list{
-  float: left
+
+
+.promoted-item {
+  border: 1px grey solid;
+  min-height: 300px;
+  text-align:center;
+
 }
