--- a/siroop/scss/_custom.scss
+++ b/siroop/scss/_custom.scss
@@ -15,15 +15,14 @@ body {
   height: 1000;
   width: 800;
   text-align: left;
+  max-height: 600px;
 
 }
-
 
 li{
   list-style: none;
   margin: 0 0 10px 10px;
 }
-
 
 .yellow-image{
   border-radius: 50%;
@@ -33,7 +32,12 @@ li{
 }
 
 .swiss-image{
-  padding-left: 120px;
+  padding-left: 0px;
+  width: 200px;
+  height: 200px;
+  border-top: 0px;
+  float: right;
+  padding-bottom: 0px;
 }
 
 
@@ -43,4 +47,13 @@ li{
   min-height: 300px;
   text-align:center;
 
+}
+
+.title{
+  min-height: 450px;
+  color: black;
+  padding:20px 30px;
+  margin-top:30px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
